# air-quality-fti

./: .cruft.json  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.code_quality/: mypy.ini  ruff.toml
.github/workflows/: air-quality-daily.yml  air-quality-train.yml  ci.yml  jekyll-gh-pages.yml
docs/: _config.yml  index.md
docs/air-quality/: index.md
notebooks/: README.md
notebooks/1-data/: 1_air_quality_feature_backfill.ipynb
notebooks/4-feat_eng/: 2_air_quality_feature_pipeline.ipynb
notebooks/5-models/: 3_air_quality_training_pipeline.ipynb
notebooks/5-models/air_quality_model/: model.json
notebooks/7-deploy/: 4_air_quality_batch_inference.ipynb
src/: config.py
src/pipelines/feature_pipeline/: feature-pipeline.py
src/pipelines/inference_pipeline/: inference-pipeline.py
src/pipelines/training_pipeline/: train-pipeline.py
src/utils/: util.py
tests/pipelines/feature_pipeline/: test_feature_pipeline.py
tests/utils/: test_util.py
